# Rust

./: README.md
fibo/: Cargo.toml
problems/src/: main.rs
src/: main.rs
tp-led-matrix/: Cargo.toml  jlink.gdb
tp-led-matrix/.cargo/: config.toml
tp-led-matrix/src/: gamma.rs  image.rs  lib.rs  main.rs
tp_led_matrix/: Cargo.toml  memory.x  rust-toolchain.toml
tp_led_matrix/src/: image.rs  lib.rs  main.rs  matrix.rs
vm/: Cargo.toml  generator.py
vm/examples/: 99bottles.dis  count.dis  factorial.dis  fibonacci.dis  hello_world.dis
vm/fuzz/: Cargo.toml
vm/fuzz/fuzz_targets/: basic.rs  random.rs
vm/src/: lib.rs  machine.rs  main.rs
vm/tests/: afact.dis  assignment.rs  basic_operations.rs  complex_execution.rs  fact.dis  fibo.dis  function.dis  multiply.dis  push_pop.dis  rfact.dis  rfact_tr.dis
