[package]
name = "tp-led-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = "2.1.0"
cortex-m-rt = "0.6.13"

cortex-m = { version = "0.7.3", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.1.0", features = ["stm32l475vg"] }

defmt = "0.3.6" 
defmt-rtt = "0.4.0" 
panic-probe  = { version = "0.3.1", features = ["print-defmt"] } 

[[bin]]
name = "tp-led-matrix"

[profile.release]
debug = true      # symbols are nice and they don't increase the size on the target
lto = true        # better optimizations
codegen-units = 1 # better optimizations



