[package]
name = "tp_led_matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = "2.1.0"
cortex-m-rt = "0.6.13"

cortex-m = { version = "0.7.3", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.1.0", features = ["stm32l475vg", "time-driver-any"] }

defmt = "0.3.6" 
defmt-rtt = "0.4.0" 
panic-probe  = { version = "0.3.1", features = ["print-defmt"] } 

embassy-time = { version = "0.3.0", features = ["tick-hz-32_768"] }
embedded-hal = "1.0.0"
embassy-sync = "0.5.0"

embedded-graphics = "0.8.1"
embassy-executor = {version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"]}


[[bin]]
name = "tp_led_matrix"

[profile.release]
debug = true      # symbols are nice and they don't increase the size on the target
lto = true        # better optimizations
codegen-units = 1 # better optimizations



